results/SVCOMP/4-shot/log-exceptions18-2024_03_18_15_36_55.txt
class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures \result instanceof A;
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\forall Exception e; e instanceof B; false);
    //@ ensures (\forall Exception e; e instanceof A; true);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:6: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result instanceof A;
                 ^
2 errors

